--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/typeorm": "^9.0.1",
+    "@types/bcrypt": "^5.0.0",
+    "bcrypt": "^5.0.1",
     "class-validator": "^0.13.2",
     "mysql": "^2.18.1",
     "reflect-metadata": "^0.1.13",
